--- a/deploy/kube.yaml
+++ b/deploy/kube.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: container-scanner
+  name: kevo
 spec:
   ttlSecondsAfterFinished: 100
   template:
