--- a/deploy/kevo/Chart.yaml
+++ b/deploy/kevo/Chart.yaml
@@ -20,6 +20,9 @@ dependencies:
   - name: redis
     repository: https://charts.bitnami.com/bitnami
     version: 16.2.1
+  - name: trivy
+    repository: https://aquasecurity.github.io/helm-charts/
+    version: 0.4.9
 
 
 # This is the version number of the application being deployed. This version number should be
