--- a/deploy/kevo/values.yaml
+++ b/deploy/kevo/values.yaml
@@ -2,6 +2,13 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+trivy:
+  trivy:
+    cache:
+      redis:
+        enabled: false
+        url: "redis://kevo-redis-headless:6379"  # e.g. redis://redis.redis.svc:6379
+
 replicaCount: 1
 
 image:
@@ -9,6 +16,9 @@ image:
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
+
+
+
 
 imagePullSecrets: []
 nameOverride: ""
