--- a/cmd/ecs/serverless.yml
+++ b/cmd/ecs/serverless.yml
@@ -54,11 +54,15 @@ package:
   exclude:
     - './**'
   include:
-    - ./bin/**
+    - ./out/**
+
+params:
+  local:
+    localstackHostname: http://localstack:4566
 
 functions:
   fetch:
-    handler: bin/fetch
+    handler: out/fetch
     events:
       - eventBridge:
           pattern: 
@@ -66,62 +70,10 @@ functions:
               - "aws.ecs"
             detail-type:
               - "ECS Task State Change"
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-# events:
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - websocket: $connect
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-#      - alb:
-#          listenerArn: arn:aws:elasticloadbalancing:us-east-1:XXXXXX:listener/app/my-load-balancer/50dc6c495c0c9188/
-#          priority: 1
-#          conditions:
-#            host: example.com
-#            path: /hello
-
 #    Define function environment variables here
     environment:
-      KEVO_SERVER_ADDRESS: "localhost:8080"
-
-plugins:
-  - serverless-localstack
-
-custom:
-  localstack:
-    debug: true
-    stages:
-      # list of stages for which the plugin should be enabled
-      - local
-    lambda:
-       # Enable this flag to improve performance
-      mountCode: True
-    docker:
-      # Enable this flag to run "docker ..." commands as sudo
-      sudo: False
+      KEVO_SERVER_ADDRESS: "localhost:10000"
+      #LOCALSTACK_HOSTNAME: ${param:localstackHostname, ''}
 
 # you can add CloudFormation resource templates here
 #resources:
